# metro

./: .gitignore  .gitmodules  Dockerfile  LICENSE  LICENSE.txt  README.md  angular.json  bun.lockb  nx.json  package.json  tsconfig.base.json
.github/workflows/: CD.yml  CI.yml
apps/metro-backend/: Dockerfile  Dockerfile.dockerignore  jest.config.ts  project.json  tsconfig.app.json  webpack.config.js
apps/metro-backend-e2e/: jest.config.ts  project.json
apps/metro-backend/prisma/: schema.prisma
apps/metro-backend/src/: main.ts  schema.gql
apps/metro-frontend/: Dockerfile  Dockerfile.dockerignore  jest.config.ts  ngsw-config.json  project.json  proxy.conf.json  tsconfig.app.json  tsconfig.spec.json
apps/metro-frontend-e2e/: playwright.config.ts  project.json
apps/metro-frontend-lite/: Dockerfile  Dockerfile.dockerignore  jest.config.ts  ngsw-config.json  project.json  tsconfig.app.json
apps/metro-frontend-lite-e2e/: playwright.config.ts  project.json
apps/metro-frontend-lite/.storybook/: preview.ts
apps/metro-frontend-lite/public/: manifest.webmanifest
apps/metro-frontend-lite/src/: index.html  main.server.ts  server.ts  styles.scss  test-setup.ts
apps/metro-frontend/.storybook/: main.ts  preview.ts
dataset-handling/: Cargo.toml
dataset-handling/src/: database.rs  gtfs.rs  main.rs
docker/: docker-compose.dev.yml  docker-compose.yml
public/icons/: logo.avif
src/: index.html  schema.gql  server.ts  styles.scss
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.server.ts  app.routes.ts
(+569 files in other folders)
