[package]
name = "metro-dataset-handling"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
geo = "0.31.0"
rayon = "1.11.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.14"
csv = "1.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.0"
